# slopos

./: .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md  TODO.md  justfile  limine.conf  link.ld  rust-toolchain.toml
.cargo/: config.toml
acpi/: Cargo.toml
boot/: Cargo.toml  idt_handlers.s
boot/src/: apic_id.rs  boot_drivers.rs  boot_impl.rs  boot_memory.rs  boot_services.rs  cpu_verify.rs  early_init.rs  ffi_boundary.rs  gdt.rs  gdt_tests.rs  idt.rs  ist_stacks.rs  lib.rs  limine_protocol.rs  shutdown.rs  shutdown_tests.rs  smp.rs
core/: Cargo.toml  context_switch.s
core/src/: driver_hooks.rs  irq.rs  irq_tests.rs  lib.rs  msi_tests.rs  platform.rs
core/src/exec/: mod.rs  tests.rs
core/src/scheduler/: context_tests.rs  fate_api.rs  ffi_boundary.rs  futex.rs  kthread.rs  lifecycle.rs  load_balance.rs  mod.rs  per_cpu.rs  runtime.rs  safe_switch.rs  sched_tests.rs  scheduler.rs  sleep.rs  switch_asm.rs  switch_context.rs  task.rs  task_lock.rs  task_struct.rs  test_tasks.rs  trap.rs  work_steal.rs
core/src/syscall/: common.rs  context.rs  core_handlers.rs  dispatch.rs  fs.rs  handlers.rs  macros.rs  memory_handlers.rs  mod.rs  net_handlers.rs  process_handlers.rs  signal.rs  tests.rs  ui_handlers.rs
core/src/syscall/fs/: fd_handlers.rs  path_handlers.rs  poll_ioctl_handlers.rs
core/src/syscall_services/: input.rs  mod.rs  net.rs  tty.rs  video.rs
docs/: PRIVILEGE_SEPARATION.md
drivers/: Cargo.toml
drivers/src/: apic.rs  apic_defs.rs  apic_timer_tests.rs  dns_tests.rs  ecam_tests.rs  fate.rs  hpet.rs  hpet_tests.rs  ingress_tests.rs  input_event.rs  interrupt_test.rs  ioapic.rs  ioapic_defs.rs  ioapic_tests.rs  irq.rs  lib.rs  line_disc.rs  loopback_tests.rs  msi.rs  msix.rs  msix_tests.rs  napi_tests.rs  neighbor_tests.rs  net_types_tests.rs  netdev_tests.rs  netstack_tests.rs  packetbuf_tests.rs  pci.rs  pci_cap_tests.rs  pci_defs.rs  pic.rs  pit.rs  pit_tests.rs  random.rs  route_tests.rs  serial.rs  socket_tests.rs  syscall_services_init.rs  tcp_data_tests.rs  tcp_tests.rs  (+9 more)
drivers/src/apic/: mod.rs  regs.rs  timer.rs
drivers/src/ioapic/: mod.rs  regs.rs  tests.rs
drivers/src/net/: arp.rs  dhcp.rs  dns.rs  ethernet.rs  ingress.rs  ipv4.rs  loopback.rs  mod.rs  napi.rs  neighbor.rs  netdev.rs  netstack.rs  packetbuf.rs  phase4d_tests.rs  pool.rs  route.rs  socket.rs  socket_option_tests.rs  tcp.rs  tcp_socket.rs  tcp_socket_tests.rs  timer.rs  types.rs  udp.rs  udp_demux_tests.rs
drivers/src/ps2/: keyboard.rs  mod.rs  mouse.rs
drivers/src/tty/: driver.rs  ldisc.rs  mod.rs  pty.rs  session.rs  table.rs
drivers/src/virtio/: mod.rs  pci.rs  queue.rs
drivers/src/xe/: display.rs  forcewake.rs  ggtt.rs  mod.rs
fs/: Cargo.toml
gfx/: Cargo.toml
kernel/: Cargo.toml
kernel/src/: main.rs
lib/: Cargo.toml
lib/src/: alignment.rs  boot_info.rs  clock.rs  cpu_local.rs  kdiag.rs  klog.rs  lib.rs  numfmt.rs  once_lock.rs  panic_recovery.rs  pcr.rs  percpu.rs  ports.rs  preempt.rs  ring_buffer.rs  spinlock.rs  stacktrace.rs  string.rs  waitqueue.rs  wl_currency.rs
lib/src/arch/: exception.rs  gdt.rs  idt.rs  mod.rs
lib/src/cpu/: apic_msr.rs  control_regs.rs  core.rs  cpuid.rs  interrupts.rs  mod.rs  msr.rs  sse.rs  stack.rs  tlb.rs  xsave.rs
lib/src/kernel_services/: driver_runtime.rs  mod.rs  platform.rs
lib/src/kernel_services/syscall_services/: dns.rs  input.rs  mod.rs  net.rs  socket.rs  tty.rs  video.rs
lib/src/testing/: assertions.rs  config.rs  harness.rs  mod.rs
lore/: THE_FORGE.md
mm/: Cargo.toml
mm/src/: aslr.rs  cow.rs  demand.rs  elf.rs  error.rs  hhdm.rs  kernel_heap.rs  lib.rs  memory_init.rs  memory_layout.rs  memory_layout_defs.rs  memory_reservations.rs  mm_constants.rs  mmio.rs  mmio_tests.rs  page_alloc.rs  paging_defs.rs  pat.rs  process_vm.rs  shared_memory.rs  symbols.rs  test_fixtures.rs  tests.rs  tests_cow_edge.rs  tests_demand.rs  tests_oom.rs  tlb.rs  tlb_tests.rs  user_copy.rs  user_ptr.rs  vma_flags.rs  vma_tree.rs
mm/src/paging/: error.rs  mod.rs  page_table_defs.rs  tables.rs  walker.rs
plans/: ABI_SCOPE_CLEANUP.md  COMPOSITOR_HOVER_REGISTRY.md  COMPOSITOR_RENDERING_GOLD_STANDARD_PLAN.md  COMPOSITOR_SAFE_TASK_CLEANUP.md  CRITICAL_KERNEL_POSIX_BLOCKERS_PLAN.md  ELF_FILESYSTEM_MIGRATION_PLAN.md  FRAMEBUFFER_PERFORMANCE_BUG.md  KNOWN_ISSUES.md  LEGACY_MODERNIZATION_PLAN.md  MM_ALLOCATOR_FIXES.md  NETCAT_PLAN.md  NETWORKING_EVOLUTION_PLAN.md  PHANTOM_W_INPUT_INVESTIGATION_2026-02-22.md  PHASE8_UNSAFE_INVARIANT_REGISTRY.md  PROGRAM_TABLE_DECOUPLING_MIGRATION_PLAN.md  README.md  SCHEDULER_FULL_SYMMETRY.md  SCHEDULER_UNIFICATION.md  SHELL_EVOLUTION_PLAN.md  SYSCALL_ARCHITECTURE_REFACTORING.md  TTY_OVERHAUL_PLAN.md  UNIFIED_PERCPU_SCHEDULER.md
scripts/: build_fs_image.sh  (+7 more)
tests/: Cargo.toml
tests/src/: exception_tests.rs  fpu_tests.rs  lib.rs  xsave_tests.rs
userland/: Cargo.toml
userland/src/: bootstrap.rs  compositor.rs  init_process.rs  lib.rs  program_registry.rs  roulette.rs  runtime.rs  shell.rs  theme.rs
userland/src/appkit/: event.rs  mod.rs  run.rs  surface.rs  window.rs
userland/src/apps/: compositor.rs  file_manager.rs  ifconfig.rs  mod.rs  nc.rs  nmap.rs  roulette.rs  shell.rs  sysinfo.rs
userland/src/apps/compositor/: hover.rs  input.rs  mod.rs  output.rs  renderer.rs  surface_cache.rs  taskbar.rs
userland/src/apps/nc/: mod.rs  tcp.rs  udp.rs
userland/src/apps/shell/: banner.rs  buffers.rs  completion.rs  display.rs  env.rs  exec.rs  history.rs  input.rs  jobs.rs  mod.rs  parser.rs  surface.rs
userland/src/apps/shell/builtins/: env.rs  fs.rs  mod.rs  process.rs  system.rs  utils.rs
userland/src/gfx/: font.rs  mod.rs  primitives.rs
userland/src/libc/: crt0.rs  ffi.rs  free_list.rs  malloc.rs  mod.rs  syscall.rs
userland/src/syscall/: core.rs  error.rs  fs.rs  input.rs  memory.rs  mod.rs  net.rs  numbers.rs  process.rs  raw.rs  roulette.rs  tty.rs  window.rs
userland/src/syscall/wrappers/: fd.rs  mod.rs  shm.rs
video/: Cargo.toml
video/src/: compositor_context.rs  font.rs  framebuffer.rs  graphics.rs  lib.rs  panic_screen.rs  roulette_core.rs  splash.rs
(+52 files in other folders)
