[workspace]
members = [
  "abi",
  "boot",
  "core",
  "drivers",
  "fs",
  "gfx",
  "kernel",
  "lib",
  "mm",
  "userland",
  "video",
  "tests"
]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "GPL-3.0-only"

[workspace.lints.rust]
warnings = "deny"
non_camel_case_types = "deny"
non_snake_case = "deny"
non_upper_case_globals = "deny"

[workspace.lints.clippy]
type_complexity = "warn"
non_camel_case_types = "deny"

[workspace.dependencies]
bitflags = { version = "2.4", default-features = false }
limine = { version = "0.5.0", default-features = false }
slopos-abi = { path = "abi" }
slopos-boot = { path = "boot" }
slopos-core = { path = "core" }
slopos-drivers = { path = "drivers" }
slopos-fs = { path = "fs" }
slopos-gfx = { path = "gfx" }
slopos-lib = { path = "lib" }
slopos-mm = { path = "mm" }
slopos-tests = { path = "tests" }
slopos-userland = { path = "userland" }
slopos-video = { path = "video" }
paste = { version = "1.0", default-features = false }
spin = { version = "0.10.0", default-features = false, features = ["mutex", "spin_mutex", "once", "rwlock"] }
uart_16550 = { version = "0.4.0", default-features = false }
x86_64 = { version = "0.15.4", default-features = false, features = ["instructions"] }
