[package]
name = "slopos-boot"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[lib]
path = "src/lib.rs"
crate-type = ["rlib"]

test = false
doctest = false

[features]
default = []
builtin-tests = ["slopos-tests/builtin-tests", "itests"]
xe-gpu = ["slopos-drivers/xe-gpu", "slopos-video/xe-gpu"]
itests = ["slopos-core/itests", "slopos-mm/itests", "slopos-drivers/itests"]

[dependencies]
limine = { workspace = true }
slopos-abi = { workspace = true }
slopos-core = { workspace = true }
slopos-lib = { workspace = true }
slopos-drivers = { workspace = true }
slopos-fs = { workspace = true }
slopos-mm = { workspace = true }
slopos-tests = { workspace = true }
slopos-video = { workspace = true }
