[package]
name = "slopos-drivers"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[lib]
path = "src/lib.rs"
crate-type = ["rlib"]

test = false
doctest = false
[features]
default = []
qemu-exit = []
xe-gpu = []
itests = []

[dependencies]
slopos-abi = { workspace = true }
slopos-acpi = { workspace = true }
slopos-lib = { workspace = true }
slopos-mm = { workspace = true }
spin.workspace = true
