[package]
name = "slopos-mm"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[lib]
path = "src/lib.rs"
crate-type = ["rlib"]

test = false
doctest = false
[features]
default = []
itests = []

[dependencies]
bitflags.workspace = true
slopos-abi = { workspace = true }
slopos-lib = { workspace = true }
