[package]
name = "slopos-tests"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[lib]
path = "src/lib.rs"
crate-type = ["rlib"]

test = false
doctest = false
[features]
default = []
builtin-tests = []

[dev-dependencies]

[package.metadata.rust-analyzer]
check.features = ["builtin-tests"]
check.allTargets = false

[dependencies]
slopos-abi = { workspace = true }
slopos-lib = { workspace = true }
slopos-drivers = { workspace = true }
