[package]
name = "slopos-userland"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[lib]
path = "src/lib.rs"
crate-type = ["rlib"]

test = false
doctest = false
[[bin]]
name = "roulette"
path = "src/bin/roulette.rs"

[[bin]]
name = "compositor"
path = "src/bin/compositor.rs"

[[bin]]
name = "shell"
path = "src/bin/shell.rs"

[[bin]]
name = "file_manager"
path = "src/bin/file_manager.rs"

[[bin]]
name = "sysinfo"
path = "src/bin/sysinfo.rs"

[[bin]]
name = "init"
path = "src/bin/init.rs"

[features]
default = []
standalone-bin = []
# Enable this to bundle an external user payload ELF from builddir/roulette_payload.elf
external_payload = []

[dependencies]
slopos-abi = { workspace = true }
slopos-core = { workspace = true }
slopos-drivers = { workspace = true }
slopos-video = { workspace = true }
slopos-boot = { workspace = true }
slopos-lib = { workspace = true }
slopos-mm = { workspace = true }
