[package]
name = "slopos-userland"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[lib]
path = "src/lib.rs"
crate-type = ["rlib"]

test = false
doctest = false
[[bin]]
name = "roulette"
path = "src/bin/roulette.rs"

[[bin]]
name = "compositor"
path = "src/bin/compositor.rs"

[[bin]]
name = "shell"
path = "src/bin/shell.rs"

[[bin]]
name = "file_manager"
path = "src/bin/file_manager.rs"

[[bin]]
name = "sysinfo"
path = "src/bin/sysinfo.rs"

[[bin]]
name = "init"
path = "src/bin/init.rs"

[[bin]]
name = "nmap"
path = "src/bin/nmap.rs"

[[bin]]
name = "ifconfig"
path = "src/bin/ifconfig.rs"

[[bin]]
name = "nc"
path = "src/bin/nc.rs"
[[bin]]
name = "fork_test"
path = "src/bin/tests/fork_test.rs"

[features]
default = []
testbins = []

[dependencies]
slopos-abi = { workspace = true }
slopos-gfx = { workspace = true }
slopos-lib = { workspace = true }
