[package]
name = "slopos-video"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[lib]
path = "src/lib.rs"
crate-type = ["rlib"]

test = false
doctest = false

[features]
xe-gpu = ["slopos-drivers/xe-gpu"]

[dependencies]
slopos-abi = { workspace = true }
slopos-core = { workspace = true }
slopos-gfx = { workspace = true }
slopos-drivers = { workspace = true }
slopos-lib = { workspace = true }
slopos-mm = { workspace = true }
spin = { workspace = true }
